--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Crave Laughs</title>
 </head>
 <body>
+    <h3>Email tavi.laughs@gmail.com</h3></p>
     <img src="crave_laughs.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
