--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Crave Laughs</title>
+    <style>
+        p, h3 {
+            font-family: "Gill Sans", sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h3>Email tavi.laughs@gmail.com</h3></p>
+    <h3>Email <a href="mailto:tavi.laughs@gmail.com">tavi.laughs@gmail.com</a></h3>
     <img src="crave_laughs.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
