--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         p, h3 {
             font-family: "Gill Sans", sans-serif;
         }
+
+        h3 {
+            font-size: "36px";
+        }
     </style>
 </head>
 <body>
