--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }
 
         h3 {
-            font-size: "50px";
+            font-size: 1.5em !important;
         }
     </style>
 </head>
