--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <h3>Email <a href="mailto:tavi.laughs@gmail.com">tavi.laughs@gmail.com</a></h3>
-    <img src="crave_laughs.png" alt="Email tavi.laughs@gmail.com">
+    <img src="crave_laughs_2.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
