--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 </head>
 <body>
     <h3>Email <a href="mailto:tavi.laughs@gmail.com">tavi.laughs@gmail.com</a></h3>
+    <p>Crave Laughs #2</p>
+    <p>Free Comedy Open Mic in Lawrenceville, NJ</p>
+    <p>Thursday, January 25th at 8pm</p>
+    <p>Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ</p>
     <img src="crave_laughs_2.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
