--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <title>Crave Laughs</title>
     <style>
-        p, h3 {
+        p, h3, h4 {
             font-family: "Gill Sans", sans-serif;
         }
 
         h3 {
             font-size: 1.5em !important;
+        }
+
+        h4 {
+            font-size: 1.25em !important;
         }
     </style>
     <!-- Google tag (gtag.js) -->
@@ -17,10 +21,14 @@
 </head>
 <body>
     <h3>Email <a href="mailto:tavi.laughs@gmail.com">tavi.laughs@gmail.com</a></h3>
-    <p>Crave Laughs #2</p>
-    <p>Free Comedy Open Mic in Lawrenceville, NJ</p>
-    <p>Thursday, January 25th at 8pm</p>
-    <p>Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ</p>
+    <h4>Crave Laughs #2</h4>
+    <p>
+        Free Comedy Open Mic in Lawrenceville, NJ
+        <br />
+        Thursday, January 25th at 8pm
+        <br />
+        Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ
+    </p>
     <img src="crave_laughs_2.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
