--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </head>
 <body>
     <h3>Email <a href="mailto:tavi.laughs@gmail.com">tavi.laughs@gmail.com</a></h3>
-    <h4>Crave Laughs #2</h4>
+    <h4>Crave Laughs</h4>
     <p>
         Free Comedy Open Mic in Lawrenceville, NJ
         <br />
-        Thursday, January 25th at 8pm
+        Thursday, March 28th at 7:30pm and Every 4th Thursday
         <br />
         Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ
     </p>
-    <img src="crave_laughs_2.png" alt="Email tavi.laughs@gmail.com">
+    <img src="crave_laughs_3_28.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
