--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <p>
         Free Comedy Open Mic in Lawrenceville, NJ
         <br />
-        Thursday, April 25th at 7:30pm and Every 4th Thursday
+        Thursday, September 26th at 7:30pm and Every 4th Thursday
         <br />
         Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ
     </p>
-    <img src="crave_laughs_4_25.png" alt="Email tavi.laughs@gmail.com">
+    <img src="Crave Laughs Open Mic 926.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
