--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         <br />
         Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ
     </p>
-    <img src="Crave Laughs Open Mic 926.png" alt="Email tavi.laughs@gmail.com">
+    <img src="crave_laughs_926_small.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
