--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <p>
         Free Comedy Open Mic in Lawrenceville, NJ
         <br />
-        Thursday, November 21st at 7:30pm
+        Thursday, December 19th at 7:30pm
         <br />
         Crave Nature's Eatery: 1891 Brunswick Pike, Lawrenceville, NJ
     </p>
-    <img src="crave_laughs_1121_small.png" alt="Email tavi.laughs@gmail.com">
+    <img src="crave_laughs_1219_small.png" alt="Email tavi.laughs@gmail.com">
 </body>
 </html>
